k8s/nginx-letsencrypt/dns01-challenge/welocal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welocal.shop
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/issuer: letsencrypt-welocal-dns
    #cert-manager.io/cluster-issuer: "letsencrypt-staging"
    #cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #acme.cert-manager.io/http01-edit-in-place: "true"

spec:
  tls:
  - hosts:
    - welocal.shop
    - payments.welocal.shop
    - merchant.welocal.shop
    secretName: welocal-ingress-tls
  ingressClassName: nginx
  rules:
  - host: welocal.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: paymentgateway
            port:
              number: 80
  - host: payments.welocal.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payments
            port:
              number: 80
  - host: merchant.welocal.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: merchant
            port:
              number: 80
